--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   },
   "dependencies": {
     "gatsby": "^2.15.34",
+    "gatsby-plugin-react-helmet": "^3.1.13",
+    "gatsby-plugin-sass": "^2.1.20",
+    "gatsby-source-wordpress": "^3.1.43",
+    "node-sass": "^4.12.0",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
