--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^2.15.34",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
+    "gatsby-source-graphql": "^2.1.20",
     "gatsby-source-wordpress": "^3.1.43",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
