--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-source-graphql": "^2.1.20",
     "gatsby-source-wordpress": "^3.1.43",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
