--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   },
   "dependencies": {
     "gatsby": "^2.15.34",
+    "gatsby-image": "^2.2.31",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sass": "^2.1.20",
+    "gatsby-plugin-sharp": "^2.2.37",
+    "gatsby-source-filesystem": "^2.1.36",
     "gatsby-source-graphql": "^2.1.20",
+    "gatsby-transformer-sharp": "^2.3.3",
+    "gatsby-wpgraphql-inline-images": "^0.2.3",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
